--- a/style.css
+++ b/style.css
@@ -6,6 +6,12 @@ body {
     flex-direction: column;
   }
 
+  .body {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+  }
+  
   /* Header CSS */
   
   .header {
@@ -143,7 +149,54 @@ body {
     text-align: right;
   }
 
+  /* Call to Action CSS */
+
+  .call-to-action {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    background-color: #3882f6;
+    border-radius: 12px;
+    padding: 24px;
+    gap: 32px;
+    margin: 72px;
+    width: 75%;
+  }
+
+  .cta-left {
+    display: flex;
+    flex-direction: column;
+    width: 60%;
+    margin: 24px;
+  }
+
+  .call-to-action button {
+    border: 2px solid white;
+    
+  }
+
+  h3 {
+    font-size: 24px;
+    color: #f9faf8;
+    font-weight: 700;
+    margin: 0;
+  }
+
+  .call-to-action p {
+    font-size: 18px;
+    color: #e5e7eb;
+    margin: 0;
+    margin-top: 10px;
+  }
+
   .footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #1f2937;
+    color: #f9faf8;
+    padding: 36px;
   }
   
 
